--- a/sites/stamped.com/bin/www/templates/password-forgot.html
+++ b/sites/stamped.com/bin/www/templates/password-forgot.html
@@ -111,7 +111,7 @@
 
                         {% if email %}
                         
-                        <p class="intro spacing">An email has been sent to <strong>{{ email }}</strong>.</p>
+                        <p class="intro spacing">An email has been sent with a link to reset your password.</p>
 
                         {% else %}
                         
